# RunShoot

./: .gitignore  CMakeLists.txt  README.md  Runshoot - Met Requirements.xlsx  archetypes ideas.txt  azure-pipelines.yml  reass.sh  startup_config.json
apps/: character_controller.hpp  drone_controller.cpp  drone_controller.hpp  drone_spawner.cpp  drone_spawner.hpp  freefly_controller.hpp  generate_colliders.cpp  main.cpp  main_menu_controller.hpp  milestone1.cpp  milestone1.hpp  music_player.cpp  music_player.hpp  player_controller.cpp  player_controller.hpp  run_shoot_character_controller.cpp  run_shoot_character_controller.hpp  runshoot.cpp  runshoot.hpp  runshoot_event.hpp  segment_spawner.cpp  segment_spawner.hpp  shooter_controller.cpp  shooter_controller.hpp  sound.cpp  sound.hpp  sound_emitter.cpp  sound_emitter.hpp
apps/components/: add_custom_components.hpp  character_controller_component.cpp  character_controller_component.hpp  death_trigger_component.cpp  death_trigger_component.hpp  drone_controller_component.cpp  drone_controller_component.hpp  drone_spawner_component.cpp  drone_spawner_component.hpp  freefly_controller_component.cpp  freefly_controller_component.hpp  main_menu_controller_component.cpp  main_menu_controller_component.hpp  music_player_component.cpp  music_player_component.hpp  player_controller_component.cpp  player_controller_component.hpp  runshoot_component.hpp  segment_component.cpp  segment_component.hpp  segment_spawner_component.cpp  segment_spawner_component.hpp  shooter_controller_component.cpp  shooter_controller_component.hpp  sound_emitter_component.cpp  sound_emitter_component.hpp  turn_direction.hpp  turn_trigger_component.cpp  turn_trigger_component.hpp
assets/blender/: cube.blend  cube.blend1  drone.blend  roof.blend  roof.blend1  seg1.blend  seg1.blend1  seg1.fbx  seg2.blend  seg2.blend1  seg3.blend  seg3.blend1
assets/models/: brick_cube.json  instructions.json  light_quad.json  roof.mtl  shooter_quad.json  square.json  triangle.json  triangle_textured.json  wall_quad.json
assets/prototypes/: cube_marker.json  drone.json  drone_light.json  freefly_player.json  phys_cube.json  player.json  seg1.json  seg2.json  seg3.json  shooter.json  turn_trigger.json
assets/scenes/: instructions.json  phys_cube_scene.json  runshoot_gameplay.json  scene.json  testground.json
assets/shaders/: debug.frag  debug.vert  default.frag  default.vert  glare.frag  overlay.frag  overlay.vert  ptx2d_basic.frag  ptx2d_basic.vert  ptx2d_pvm.frag  ptx2d_pvm.vert  skybox.frag  skybox.vert
cmake_modules/: add_assimp.cmake  add_expected.cmake  add_fmod.cmake  add_glad.cmake  add_glbinding.cmake  add_glfw.cmake  add_glm.cmake  add_nlohmann_json.cmake  add_ogllib.cmake  add_spdlog.cmake  add_tinygltf.cmake  add_warnings.cmake
include/animation/: texture_animator.hpp
include/asset/: asset_element.h  asset_types.hpp  asset_visitor.h  assimp_loader.hpp  basic_mesh_reader.hpp  component_loader.hpp  gltf_reader.hpp  mesh.hpp  mesh_read_error.hpp  mesh_type.hpp  model.hpp  multi_texture_mesh.hpp  prototype_loader.hpp  prototype_spawner.hpp  scene.hpp  scene_graph_node.hpp  scene_graph_node_base.hpp  scene_graph_root.hpp  scene_loader.hpp  texture_manager.hpp  textured_mesh.hpp  tinygltf_loader.hpp
include/core/: behavior.hpp  behavior_context.hpp  entity_grabber.hpp  frame_limiter.hpp  frame_timer.hpp  framerate.hpp  input_manager.hpp  scene.h  scene_tracker.hpp  startup.hpp  startup_config.hpp
include/ecs/: archetype_id.hpp  archetype_pool.hpp  archetype_store.hpp  behavior_component.hpp  chunk_component_accessor.hpp  component.hpp  component_meta.hpp  component_store.hpp  component_tracked_store.hpp  ecs_types.hpp  entity.hpp  entity_factory.hpp  entity_grabber.hpp  entity_world.hpp  game_obj_component_pools.hpp  game_object.hpp  game_object_factory.hpp
include/events/: event.hpp  event_dispatcher.hpp  event_exchange.hpp  event_type.hpp  events_codeproj.hpp  future_invoke.hpp  listener.hpp
include/memory/: pool_allocator.hpp  typed_pool_allocator.hpp
include/physics/: collider_iterator.hpp  collisions.hpp  contact.hpp  entity_contact.hpp  intersection_tests.hpp  physics_world.hpp
include/physics_models/: aabb.hpp  aabb_collider.hpp  collider.hpp  collision_tests.hpp  contact.hpp  ray.hpp  sphere.hpp  sphere_collider.hpp
include/renderer/: debug_drawer.hpp  mesh.hpp  model_render_loader.hpp  overlay.hpp  render_config.hpp  render_data.hpp  renderer.hpp  shader_set.hpp  skybox.hpp  vbo.hpp
include/scene/: scene_graph_node.hpp  scene_graph_node_base.hpp  scene_graph_root.hpp
include/sound_wrapper/: sound_emitter_component.hpp  (+2 more)
scripts/: add.sh  clean.sh
src/: CMakeLists.txt  archetype_store.cpp  basic_mesh_reader.cpp  behavior_component.cpp  component.cpp  component_store.cpp  event_dispatcher.cpp  frame_limiter.cpp  frame_timer.cpp  game_obj_component_pools.cpp  game_object.cpp  game_object_factory.cpp  main.cpp  pool_allocator.cpp  renderer.cpp  sleep.cpp  startup.cpp  startup_config.cpp  typed_pool_allocator.cpp  vbo.cpp
src/animation/: texture_animator.cpp
src/asset/: assimp_loader.cpp  basic_mesh_reader.cpp  component_loader.cpp  mesh.cpp  prototype_loader.cpp  prototype_spawner.cpp  scene_loader.cpp  texture_manager.cpp  tinygltf_loader.cpp
src/core/: entity_grabber.cpp  frame_timer.cpp  input_manager.cpp  scene.cpp  scene_tracker.cpp  startup_config.cpp  system_info.cpp
src/ecs/: chunk_component_accessor.cpp  component_meta.cpp  entity_factory.cpp  entity_grabber.cpp  entity_world.cpp
src/ecs/components/: basic_components.cpp
src/events/: event_dispatcher.cpp
src/memory/: pool_allocator.cpp  pool_memory_block.cpp
src/physics/: collisions.cpp  physics_world.cpp
src/physics_models/: collision_tests.cpp  contact.cpp
src/platform/: sleep.cpp
src/renderer/: model_render_loader.cpp  render_config.cpp  renderer.cpp
src/sound_wrapper/: sound_emitter_component.cpp  sound_listener_component.cpp  sound_system.cpp
tests/: archetype_pool_tests.h  main.cpp  pool_allocator_tests.h  typed_pool_allocator_tests.h
(+15 files in other folders)
